--- a/my-app/src/app/pokemon-listagem/pokemon-listagem.component.html
+++ b/my-app/src/app/pokemon-listagem/pokemon-listagem.component.html
@@ -12,22 +12,22 @@
 </style>
 <div class="container" role="list">
     <ul class="list-group">
-      <li *ngFor="let p of pokemons" class="list-group-item">{{p.id}} {{p.name}}</li>
+        <li *ngFor="let p of pokemons" class="list-group-item d-flex justify-content-between align-items-center">
+            {{p.name}} <a (click)="favoritar(p)"><img [src]="isFavorito(p.name)"></a>
+        </li>      
     </ul>
-
     <nav aria-label="Page navigation">
         <ul class="pagination mt-2">
           <li class="page-item" [class.disabled]="previous == null">
-            <a class="page-link" (click)="listar(offset-1)" tabindex="-1" aria-disabled="true">
+            <a class="page-link" (click)="listar(offset-10)" tabindex="-1" aria-disabled="true">
                 <img height="30" src="assets/images/backspace.svg">
             </a>
           </li>          
           <li class="page-item" [class.disabled]="next == null">
-            <a class="page-link" (click)="listar(offset+1)">
+            <a class="page-link" (click)="listar(offset+10)">
                 <img height="30" src="assets/images/backspace-reverse.svg">
               </a>
           </li>
         </ul>
       </nav>
-
 </div>
